# Theseus

./: .gitignore  .pre-commit-config.yaml  README.md  app.js  index.html  pyproject.toml  style.css  theseus.config.json
.github/workflows/: deploy.yml  integration-tests.yml  theseus-engine.yml
data/: claude-code_data.json  langchain_data.json  manifest.json  numpy_data.json  react_data.json  theseus_data.json  zed_data.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVOPS.md
scripts/: add_fossils.py  analyse_repository.py  cleanup_data.py
tests/: test_analyse_repository.py  test_data_integrity.py
