[project]
name = "theseus"
version = "0.1.0"
description = "A philosophical data pipeline analyzing the decay and rebirth of codebases."
authors = [
    {name = "Asif Sayyed",email = "asifdotexe@gmail.com"}
]
license = {text = "AGPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (==9.0.2)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "pylint (>=4.0.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
